syntax = "proto3";

package com.example.demo.GRPC;

option java_package = "com.example.demo.GRPC";
option java_outer_classname = "EmployeeProto";

message Employee {
    string employee_id = 1;
    string name = 2;
    string dob = 3;
    string address = 4;
    string phone_number = 5;
}
service EmployeeService {
    rpc GetEmployeeById(EmployeeRequest) returns (EmployeeResponse);
    rpc UpdateEmployee(UpdateEmployeeRequest) returns (EmployeeResponse);
}

message EmployeeRequest {
    string employee_id = 1;
}

message UpdateEmployeeRequest {
    Employee employee = 1;
}

message EmployeeResponse {
    Employee employee = 1;
}